APIs/googleapis.com/monitoring/v1/javascript-client/README.md
# cloud_monitoring_api

CloudMonitoringApi - JavaScript client for cloud_monitoring_api
Manages your Cloud Monitoring data and configurations.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: v1
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install cloud_monitoring_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your cloud_monitoring_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CloudMonitoringApi = require('cloud_monitoring_api');

var defaultClient = CloudMonitoringApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new CloudMonitoringApi.LocationsApi()
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'monitoredResourceContainer': "monitoredResourceContainer_example" // {String} Required. The resource name of the Monitored Project being requested. Example: projects/{MONITORED_PROJECT_ID_OR_NUMBER}
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.monitoringLocationsGlobalMetricsScopesListMetricsScopesByMonitoredProject(opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://monitoring.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CloudMonitoringApi.LocationsApi* | [**monitoringLocationsGlobalMetricsScopesListMetricsScopesByMonitoredProject**](docs/LocationsApi.md#monitoringLocationsGlobalMetricsScopesListMetricsScopesByMonitoredProject) | **GET** /v1/locations/global/metricsScopes:listMetricsScopesByMonitoredProject | 
*CloudMonitoringApi.LocationsApi* | [**monitoringLocationsGlobalMetricsScopesProjectsCreate**](docs/LocationsApi.md#monitoringLocationsGlobalMetricsScopesProjectsCreate) | **POST** /v1/{parent}/projects | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsDashboardsCreate**](docs/ProjectsApi.md#monitoringProjectsDashboardsCreate) | **POST** /v1/{parent}/dashboards | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsDashboardsDelete**](docs/ProjectsApi.md#monitoringProjectsDashboardsDelete) | **DELETE** /v1/{name} | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsDashboardsGet**](docs/ProjectsApi.md#monitoringProjectsDashboardsGet) | **GET** /v1/{name} | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsDashboardsList**](docs/ProjectsApi.md#monitoringProjectsDashboardsList) | **GET** /v1/{parent}/dashboards | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsDashboardsPatch**](docs/ProjectsApi.md#monitoringProjectsDashboardsPatch) | **PATCH** /v1/{name} | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsLocationPrometheusApiV1LabelValues**](docs/ProjectsApi.md#monitoringProjectsLocationPrometheusApiV1LabelValues) | **GET** /v1/{name}/location/{location}/prometheus/api/v1/label/{label}/values | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsLocationPrometheusApiV1Labels**](docs/ProjectsApi.md#monitoringProjectsLocationPrometheusApiV1Labels) | **POST** /v1/{name}/location/{location}/prometheus/api/v1/labels | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsLocationPrometheusApiV1MetadataList**](docs/ProjectsApi.md#monitoringProjectsLocationPrometheusApiV1MetadataList) | **GET** /v1/{name}/location/{location}/prometheus/api/v1/metadata | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsLocationPrometheusApiV1Query**](docs/ProjectsApi.md#monitoringProjectsLocationPrometheusApiV1Query) | **POST** /v1/{name}/location/{location}/prometheus/api/v1/query | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsLocationPrometheusApiV1QueryExemplars**](docs/ProjectsApi.md#monitoringProjectsLocationPrometheusApiV1QueryExemplars) | **POST** /v1/{name}/location/{location}/prometheus/api/v1/query_exemplars | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsLocationPrometheusApiV1QueryRange**](docs/ProjectsApi.md#monitoringProjectsLocationPrometheusApiV1QueryRange) | **POST** /v1/{name}/location/{location}/prometheus/api/v1/query_range | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsLocationPrometheusApiV1Series**](docs/ProjectsApi.md#monitoringProjectsLocationPrometheusApiV1Series) | **POST** /v1/{name}/location/{location}/prometheus/api/v1/series | 


## Documentation for Models

 - [CloudMonitoringApi.Aggregation](docs/Aggregation.md)
 - [CloudMonitoringApi.AggregationFunction](docs/AggregationFunction.md)
 - [CloudMonitoringApi.AlertChart](docs/AlertChart.md)
 - [CloudMonitoringApi.Axis](docs/Axis.md)
 - [CloudMonitoringApi.Breakdown](docs/Breakdown.md)
 - [CloudMonitoringApi.ChartOptions](docs/ChartOptions.md)
 - [CloudMonitoringApi.CollapsibleGroup](docs/CollapsibleGroup.md)
 - [CloudMonitoringApi.Column](docs/Column.md)
 - [CloudMonitoringApi.ColumnLayout](docs/ColumnLayout.md)
 - [CloudMonitoringApi.ColumnSettings](docs/ColumnSettings.md)
 - [CloudMonitoringApi.Dashboard](docs/Dashboard.md)
 - [CloudMonitoringApi.DashboardFilter](docs/DashboardFilter.md)
 - [CloudMonitoringApi.DataSet](docs/DataSet.md)
 - [CloudMonitoringApi.Dimension](docs/Dimension.md)
 - [CloudMonitoringApi.DroppedLabels](docs/DroppedLabels.md)
 - [CloudMonitoringApi.ErrorReportingPanel](docs/ErrorReportingPanel.md)
 - [CloudMonitoringApi.Field](docs/Field.md)
 - [CloudMonitoringApi.GaugeView](docs/GaugeView.md)
 - [CloudMonitoringApi.GridLayout](docs/GridLayout.md)
 - [CloudMonitoringApi.HttpBody](docs/HttpBody.md)
 - [CloudMonitoringApi.IncidentList](docs/IncidentList.md)
 - [CloudMonitoringApi.Interval](docs/Interval.md)
 - [CloudMonitoringApi.ListDashboardsResponse](docs/ListDashboardsResponse.md)
 - [CloudMonitoringApi.ListMetricsScopesByMonitoredProjectResponse](docs/ListMetricsScopesByMonitoredProjectResponse.md)
 - [CloudMonitoringApi.LogsPanel](docs/LogsPanel.md)
 - [CloudMonitoringApi.Measure](docs/Measure.md)
 - [CloudMonitoringApi.MetricsScope](docs/MetricsScope.md)
 - [CloudMonitoringApi.MonitoredProject](docs/MonitoredProject.md)
 - [CloudMonitoringApi.MonitoredResource](docs/MonitoredResource.md)
 - [CloudMonitoringApi.MosaicLayout](docs/MosaicLayout.md)
 - [CloudMonitoringApi.Operation](docs/Operation.md)
 - [CloudMonitoringApi.OperationMetadata](docs/OperationMetadata.md)
 - [CloudMonitoringApi.OpsAnalyticsQuery](docs/OpsAnalyticsQuery.md)
 - [CloudMonitoringApi.Option](docs/Option.md)
 - [CloudMonitoringApi.Parameter](docs/Parameter.md)
 - [CloudMonitoringApi.PickTimeSeriesFilter](docs/PickTimeSeriesFilter.md)
 - [CloudMonitoringApi.PieChart](docs/PieChart.md)
 - [CloudMonitoringApi.PieChartDataSet](docs/PieChartDataSet.md)
 - [CloudMonitoringApi.QueryExemplarsRequest](docs/QueryExemplarsRequest.md)
 - [CloudMonitoringApi.QueryInstantRequest](docs/QueryInstantRequest.md)
 - [CloudMonitoringApi.QueryLabelsRequest](docs/QueryLabelsRequest.md)
 - [CloudMonitoringApi.QueryRangeRequest](docs/QueryRangeRequest.md)
 - [CloudMonitoringApi.QuerySeriesRequest](docs/QuerySeriesRequest.md)
 - [CloudMonitoringApi.RatioPart](docs/RatioPart.md)
 - [CloudMonitoringApi.Row](docs/Row.md)
 - [CloudMonitoringApi.RowLayout](docs/RowLayout.md)
 - [CloudMonitoringApi.Scorecard](docs/Scorecard.md)
 - [CloudMonitoringApi.SectionHeader](docs/SectionHeader.md)
 - [CloudMonitoringApi.SourceContext](docs/SourceContext.md)
 - [CloudMonitoringApi.SpanContext](docs/SpanContext.md)
 - [CloudMonitoringApi.SparkChartView](docs/SparkChartView.md)
 - [CloudMonitoringApi.StatisticalTimeSeriesFilter](docs/StatisticalTimeSeriesFilter.md)
 - [CloudMonitoringApi.Status](docs/Status.md)
 - [CloudMonitoringApi.TableDataSet](docs/TableDataSet.md)
 - [CloudMonitoringApi.TableDisplayOptions](docs/TableDisplayOptions.md)
 - [CloudMonitoringApi.Text](docs/Text.md)
 - [CloudMonitoringApi.TextStyle](docs/TextStyle.md)
 - [CloudMonitoringApi.Threshold](docs/Threshold.md)
 - [CloudMonitoringApi.Tile](docs/Tile.md)
 - [CloudMonitoringApi.TimeSeriesFilter](docs/TimeSeriesFilter.md)
 - [CloudMonitoringApi.TimeSeriesFilterRatio](docs/TimeSeriesFilterRatio.md)
 - [CloudMonitoringApi.TimeSeriesQuery](docs/TimeSeriesQuery.md)
 - [CloudMonitoringApi.TimeSeriesTable](docs/TimeSeriesTable.md)
 - [CloudMonitoringApi.Type](docs/Type.md)
 - [CloudMonitoringApi.Widget](docs/Widget.md)
 - [CloudMonitoringApi.XyChart](docs/XyChart.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/monitoring: View and write monitoring data for all of your Google and third-party Cloud and API projects
  - https://www.googleapis.com/auth/monitoring.read: View monitoring data for all of your Google Cloud and third-party projects
  - https://www.googleapis.com/auth/monitoring.write: Publish metric data to your Google Cloud projects

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/monitoring: View and write monitoring data for all of your Google and third-party Cloud and API projects
  - https://www.googleapis.com/auth/monitoring.read: View monitoring data for all of your Google Cloud and third-party projects
  - https://www.googleapis.com/auth/monitoring.write: Publish metric data to your Google Cloud projects

