APIs/googleapis.com/monitoring/v3/javascript-client/README.md
# cloud_monitoring_api

CloudMonitoringApi - JavaScript client for cloud_monitoring_api
Manages your Cloud Monitoring data and configurations.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v3
- Package version: v3
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install cloud_monitoring_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your cloud_monitoring_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CloudMonitoringApi = require('cloud_monitoring_api');

var defaultClient = CloudMonitoringApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new CloudMonitoringApi.ProjectsApi()
var name = "name_example"; // {String} Required. The project (https://cloud.google.com/monitoring/api/v3#project_name) in which to create the alerting policy. The format is: projects/[PROJECT_ID_OR_NUMBER] Note that this field names the parent container in which the alerting policy will be written, not the name of the created policy. |name| must be a host project of a Metrics Scope, otherwise INVALID_ARGUMENT error will return. The alerting policy that is returned will have a name that contains a normalized representation of this name as a prefix but adds a suffix of the form /alertPolicies/[ALERT_POLICY_ID], identifying the policy in the container.
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'alertPolicy': new CloudMonitoringApi.AlertPolicy() // {AlertPolicy} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.monitoringProjectsAlertPoliciesCreate(name, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://monitoring.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsAlertPoliciesCreate**](docs/ProjectsApi.md#monitoringProjectsAlertPoliciesCreate) | **POST** /v3/{name}/alertPolicies | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsAlertPoliciesList**](docs/ProjectsApi.md#monitoringProjectsAlertPoliciesList) | **GET** /v3/{name}/alertPolicies | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsCollectdTimeSeriesCreate**](docs/ProjectsApi.md#monitoringProjectsCollectdTimeSeriesCreate) | **POST** /v3/{name}/collectdTimeSeries | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsGroupsCreate**](docs/ProjectsApi.md#monitoringProjectsGroupsCreate) | **POST** /v3/{name}/groups | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsGroupsList**](docs/ProjectsApi.md#monitoringProjectsGroupsList) | **GET** /v3/{name}/groups | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsGroupsMembersList**](docs/ProjectsApi.md#monitoringProjectsGroupsMembersList) | **GET** /v3/{name}/members | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsGroupsUpdate**](docs/ProjectsApi.md#monitoringProjectsGroupsUpdate) | **PUT** /v3/{name} | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsMetricDescriptorsCreate**](docs/ProjectsApi.md#monitoringProjectsMetricDescriptorsCreate) | **POST** /v3/{name}/metricDescriptors | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsMetricDescriptorsList**](docs/ProjectsApi.md#monitoringProjectsMetricDescriptorsList) | **GET** /v3/{name}/metricDescriptors | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsMonitoredResourceDescriptorsList**](docs/ProjectsApi.md#monitoringProjectsMonitoredResourceDescriptorsList) | **GET** /v3/{name}/monitoredResourceDescriptors | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsNotificationChannelDescriptorsList**](docs/ProjectsApi.md#monitoringProjectsNotificationChannelDescriptorsList) | **GET** /v3/{name}/notificationChannelDescriptors | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsNotificationChannelsCreate**](docs/ProjectsApi.md#monitoringProjectsNotificationChannelsCreate) | **POST** /v3/{name}/notificationChannels | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsNotificationChannelsGetVerificationCode**](docs/ProjectsApi.md#monitoringProjectsNotificationChannelsGetVerificationCode) | **POST** /v3/{name}:getVerificationCode | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsNotificationChannelsList**](docs/ProjectsApi.md#monitoringProjectsNotificationChannelsList) | **GET** /v3/{name}/notificationChannels | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsNotificationChannelsSendVerificationCode**](docs/ProjectsApi.md#monitoringProjectsNotificationChannelsSendVerificationCode) | **POST** /v3/{name}:sendVerificationCode | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsNotificationChannelsVerify**](docs/ProjectsApi.md#monitoringProjectsNotificationChannelsVerify) | **POST** /v3/{name}:verify | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsSnoozesCreate**](docs/ProjectsApi.md#monitoringProjectsSnoozesCreate) | **POST** /v3/{parent}/snoozes | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsSnoozesList**](docs/ProjectsApi.md#monitoringProjectsSnoozesList) | **GET** /v3/{parent}/snoozes | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsTimeSeriesCreate**](docs/ProjectsApi.md#monitoringProjectsTimeSeriesCreate) | **POST** /v3/{name}/timeSeries | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsTimeSeriesCreateService**](docs/ProjectsApi.md#monitoringProjectsTimeSeriesCreateService) | **POST** /v3/{name}/timeSeries:createService | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsTimeSeriesList**](docs/ProjectsApi.md#monitoringProjectsTimeSeriesList) | **GET** /v3/{name}/timeSeries | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsTimeSeriesQuery**](docs/ProjectsApi.md#monitoringProjectsTimeSeriesQuery) | **POST** /v3/{name}/timeSeries:query | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsUptimeCheckConfigsCreate**](docs/ProjectsApi.md#monitoringProjectsUptimeCheckConfigsCreate) | **POST** /v3/{parent}/uptimeCheckConfigs | 
*CloudMonitoringApi.ProjectsApi* | [**monitoringProjectsUptimeCheckConfigsList**](docs/ProjectsApi.md#monitoringProjectsUptimeCheckConfigsList) | **GET** /v3/{parent}/uptimeCheckConfigs | 
*CloudMonitoringApi.ServicesApi* | [**monitoringServicesCreate**](docs/ServicesApi.md#monitoringServicesCreate) | **POST** /v3/{parent}/services | 
*CloudMonitoringApi.ServicesApi* | [**monitoringServicesList**](docs/ServicesApi.md#monitoringServicesList) | **GET** /v3/{parent}/services | 
*CloudMonitoringApi.ServicesApi* | [**monitoringServicesServiceLevelObjectivesCreate**](docs/ServicesApi.md#monitoringServicesServiceLevelObjectivesCreate) | **POST** /v3/{parent}/serviceLevelObjectives | 
*CloudMonitoringApi.ServicesApi* | [**monitoringServicesServiceLevelObjectivesDelete**](docs/ServicesApi.md#monitoringServicesServiceLevelObjectivesDelete) | **DELETE** /v3/{name} | 
*CloudMonitoringApi.ServicesApi* | [**monitoringServicesServiceLevelObjectivesGet**](docs/ServicesApi.md#monitoringServicesServiceLevelObjectivesGet) | **GET** /v3/{name} | 
*CloudMonitoringApi.ServicesApi* | [**monitoringServicesServiceLevelObjectivesList**](docs/ServicesApi.md#monitoringServicesServiceLevelObjectivesList) | **GET** /v3/{parent}/serviceLevelObjectives | 
*CloudMonitoringApi.ServicesApi* | [**monitoringServicesServiceLevelObjectivesPatch**](docs/ServicesApi.md#monitoringServicesServiceLevelObjectivesPatch) | **PATCH** /v3/{name} | 
*CloudMonitoringApi.UptimeCheckIpsApi* | [**monitoringUptimeCheckIpsList**](docs/UptimeCheckIpsApi.md#monitoringUptimeCheckIpsList) | **GET** /v3/uptimeCheckIps | 


## Documentation for Models

 - [CloudMonitoringApi.Aggregation](docs/Aggregation.md)
 - [CloudMonitoringApi.AlertPolicy](docs/AlertPolicy.md)
 - [CloudMonitoringApi.AlertStrategy](docs/AlertStrategy.md)
 - [CloudMonitoringApi.AppEngine](docs/AppEngine.md)
 - [CloudMonitoringApi.BasicAuthentication](docs/BasicAuthentication.md)
 - [CloudMonitoringApi.BasicService](docs/BasicService.md)
 - [CloudMonitoringApi.BasicSli](docs/BasicSli.md)
 - [CloudMonitoringApi.BucketOptions](docs/BucketOptions.md)
 - [CloudMonitoringApi.CloudEndpoints](docs/CloudEndpoints.md)
 - [CloudMonitoringApi.CloudFunctionV2Target](docs/CloudFunctionV2Target.md)
 - [CloudMonitoringApi.CloudRun](docs/CloudRun.md)
 - [CloudMonitoringApi.ClusterIstio](docs/ClusterIstio.md)
 - [CloudMonitoringApi.CollectdPayload](docs/CollectdPayload.md)
 - [CloudMonitoringApi.CollectdPayloadError](docs/CollectdPayloadError.md)
 - [CloudMonitoringApi.CollectdValue](docs/CollectdValue.md)
 - [CloudMonitoringApi.CollectdValueError](docs/CollectdValueError.md)
 - [CloudMonitoringApi.Condition](docs/Condition.md)
 - [CloudMonitoringApi.ContentMatcher](docs/ContentMatcher.md)
 - [CloudMonitoringApi.CreateCollectdTimeSeriesRequest](docs/CreateCollectdTimeSeriesRequest.md)
 - [CloudMonitoringApi.CreateCollectdTimeSeriesResponse](docs/CreateCollectdTimeSeriesResponse.md)
 - [CloudMonitoringApi.CreateTimeSeriesRequest](docs/CreateTimeSeriesRequest.md)
 - [CloudMonitoringApi.CreateTimeSeriesSummary](docs/CreateTimeSeriesSummary.md)
 - [CloudMonitoringApi.Criteria](docs/Criteria.md)
 - [CloudMonitoringApi.Distribution](docs/Distribution.md)
 - [CloudMonitoringApi.DistributionCut](docs/DistributionCut.md)
 - [CloudMonitoringApi.Documentation](docs/Documentation.md)
 - [CloudMonitoringApi.DroppedLabels](docs/DroppedLabels.md)
 - [CloudMonitoringApi.Error](docs/Error.md)
 - [CloudMonitoringApi.Exemplar](docs/Exemplar.md)
 - [CloudMonitoringApi.Explicit](docs/Explicit.md)
 - [CloudMonitoringApi.Exponential](docs/Exponential.md)
 - [CloudMonitoringApi.Field](docs/Field.md)
 - [CloudMonitoringApi.ForecastOptions](docs/ForecastOptions.md)
 - [CloudMonitoringApi.GetNotificationChannelVerificationCodeRequest](docs/GetNotificationChannelVerificationCodeRequest.md)
 - [CloudMonitoringApi.GetNotificationChannelVerificationCodeResponse](docs/GetNotificationChannelVerificationCodeResponse.md)
 - [CloudMonitoringApi.GkeNamespace](docs/GkeNamespace.md)
 - [CloudMonitoringApi.GkeService](docs/GkeService.md)
 - [CloudMonitoringApi.GkeWorkload](docs/GkeWorkload.md)
 - [CloudMonitoringApi.GoogleMonitoringV3Range](docs/GoogleMonitoringV3Range.md)
 - [CloudMonitoringApi.Group](docs/Group.md)
 - [CloudMonitoringApi.HttpCheck](docs/HttpCheck.md)
 - [CloudMonitoringApi.InternalChecker](docs/InternalChecker.md)
 - [CloudMonitoringApi.IstioCanonicalService](docs/IstioCanonicalService.md)
 - [CloudMonitoringApi.JsonPathMatcher](docs/JsonPathMatcher.md)
 - [CloudMonitoringApi.LabelDescriptor](docs/LabelDescriptor.md)
 - [CloudMonitoringApi.LabelValue](docs/LabelValue.md)
 - [CloudMonitoringApi.LatencyCriteria](docs/LatencyCriteria.md)
 - [CloudMonitoringApi.Linear](docs/Linear.md)
 - [CloudMonitoringApi.ListAlertPoliciesResponse](docs/ListAlertPoliciesResponse.md)
 - [CloudMonitoringApi.ListGroupMembersResponse](docs/ListGroupMembersResponse.md)
 - [CloudMonitoringApi.ListGroupsResponse](docs/ListGroupsResponse.md)
 - [CloudMonitoringApi.ListMetricDescriptorsResponse](docs/ListMetricDescriptorsResponse.md)
 - [CloudMonitoringApi.ListMonitoredResourceDescriptorsResponse](docs/ListMonitoredResourceDescriptorsResponse.md)
 - [CloudMonitoringApi.ListNotificationChannelDescriptorsResponse](docs/ListNotificationChannelDescriptorsResponse.md)
 - [CloudMonitoringApi.ListNotificationChannelsResponse](docs/ListNotificationChannelsResponse.md)
 - [CloudMonitoringApi.ListServiceLevelObjectivesResponse](docs/ListServiceLevelObjectivesResponse.md)
 - [CloudMonitoringApi.ListServicesResponse](docs/ListServicesResponse.md)
 - [CloudMonitoringApi.ListSnoozesResponse](docs/ListSnoozesResponse.md)
 - [CloudMonitoringApi.ListTimeSeriesResponse](docs/ListTimeSeriesResponse.md)
 - [CloudMonitoringApi.ListUptimeCheckConfigsResponse](docs/ListUptimeCheckConfigsResponse.md)
 - [CloudMonitoringApi.ListUptimeCheckIpsResponse](docs/ListUptimeCheckIpsResponse.md)
 - [CloudMonitoringApi.LogMatch](docs/LogMatch.md)
 - [CloudMonitoringApi.MeshIstio](docs/MeshIstio.md)
 - [CloudMonitoringApi.Metric](docs/Metric.md)
 - [CloudMonitoringApi.MetricAbsence](docs/MetricAbsence.md)
 - [CloudMonitoringApi.MetricDescriptor](docs/MetricDescriptor.md)
 - [CloudMonitoringApi.MetricDescriptorMetadata](docs/MetricDescriptorMetadata.md)
 - [CloudMonitoringApi.MetricRange](docs/MetricRange.md)
 - [CloudMonitoringApi.MetricThreshold](docs/MetricThreshold.md)
 - [CloudMonitoringApi.MonitoredResource](docs/MonitoredResource.md)
 - [CloudMonitoringApi.MonitoredResourceDescriptor](docs/MonitoredResourceDescriptor.md)
 - [CloudMonitoringApi.MonitoredResourceMetadata](docs/MonitoredResourceMetadata.md)
 - [CloudMonitoringApi.MonitoringQueryLanguageCondition](docs/MonitoringQueryLanguageCondition.md)
 - [CloudMonitoringApi.MutationRecord](docs/MutationRecord.md)
 - [CloudMonitoringApi.NotificationChannel](docs/NotificationChannel.md)
 - [CloudMonitoringApi.NotificationChannelDescriptor](docs/NotificationChannelDescriptor.md)
 - [CloudMonitoringApi.NotificationChannelStrategy](docs/NotificationChannelStrategy.md)
 - [CloudMonitoringApi.NotificationRateLimit](docs/NotificationRateLimit.md)
 - [CloudMonitoringApi.OperationMetadata](docs/OperationMetadata.md)
 - [CloudMonitoringApi.Option](docs/Option.md)
 - [CloudMonitoringApi.PerformanceThreshold](docs/PerformanceThreshold.md)
 - [CloudMonitoringApi.PingConfig](docs/PingConfig.md)
 - [CloudMonitoringApi.Point](docs/Point.md)
 - [CloudMonitoringApi.PointData](docs/PointData.md)
 - [CloudMonitoringApi.PrometheusQueryLanguageCondition](docs/PrometheusQueryLanguageCondition.md)
 - [CloudMonitoringApi.QueryTimeSeriesRequest](docs/QueryTimeSeriesRequest.md)
 - [CloudMonitoringApi.QueryTimeSeriesResponse](docs/QueryTimeSeriesResponse.md)
 - [CloudMonitoringApi.Range](docs/Range.md)
 - [CloudMonitoringApi.RequestBasedSli](docs/RequestBasedSli.md)
 - [CloudMonitoringApi.ResourceGroup](docs/ResourceGroup.md)
 - [CloudMonitoringApi.ResponseStatusCode](docs/ResponseStatusCode.md)
 - [CloudMonitoringApi.Service](docs/Service.md)
 - [CloudMonitoringApi.ServiceLevelIndicator](docs/ServiceLevelIndicator.md)
 - [CloudMonitoringApi.ServiceLevelObjective](docs/ServiceLevelObjective.md)
 - [CloudMonitoringApi.Snooze](docs/Snooze.md)
 - [CloudMonitoringApi.SourceContext](docs/SourceContext.md)
 - [CloudMonitoringApi.SpanContext](docs/SpanContext.md)
 - [CloudMonitoringApi.Status](docs/Status.md)
 - [CloudMonitoringApi.SyntheticMonitorTarget](docs/SyntheticMonitorTarget.md)
 - [CloudMonitoringApi.TcpCheck](docs/TcpCheck.md)
 - [CloudMonitoringApi.Telemetry](docs/Telemetry.md)
 - [CloudMonitoringApi.TimeInterval](docs/TimeInterval.md)
 - [CloudMonitoringApi.TimeSeries](docs/TimeSeries.md)
 - [CloudMonitoringApi.TimeSeriesData](docs/TimeSeriesData.md)
 - [CloudMonitoringApi.TimeSeriesDescriptor](docs/TimeSeriesDescriptor.md)
 - [CloudMonitoringApi.TimeSeriesRatio](docs/TimeSeriesRatio.md)
 - [CloudMonitoringApi.Trigger](docs/Trigger.md)
 - [CloudMonitoringApi.Type](docs/Type.md)
 - [CloudMonitoringApi.TypedValue](docs/TypedValue.md)
 - [CloudMonitoringApi.UptimeCheckConfig](docs/UptimeCheckConfig.md)
 - [CloudMonitoringApi.UptimeCheckIp](docs/UptimeCheckIp.md)
 - [CloudMonitoringApi.ValueDescriptor](docs/ValueDescriptor.md)
 - [CloudMonitoringApi.VerifyNotificationChannelRequest](docs/VerifyNotificationChannelRequest.md)
 - [CloudMonitoringApi.WindowsBasedSli](docs/WindowsBasedSli.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/monitoring: View and write monitoring data for all of your Google and third-party Cloud and API projects
  - https://www.googleapis.com/auth/monitoring.read: View monitoring data for all of your Google Cloud and third-party projects
  - https://www.googleapis.com/auth/monitoring.write: Publish metric data to your Google Cloud projects

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/monitoring: View and write monitoring data for all of your Google and third-party Cloud and API projects
  - https://www.googleapis.com/auth/monitoring.read: View monitoring data for all of your Google Cloud and third-party projects
  - https://www.googleapis.com/auth/monitoring.write: Publish metric data to your Google Cloud projects

